--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- 修复：将MaterialButton替换为原生Button（避免依赖缺失问题），保留功能 -->
+    <!-- 主切换按钮 -->
     <Button
         android:id="@+id/tun_switch_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="启动拦截"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/> <!-- 修复：将app:layout_constraintMarginTop改为android:layout_marginTop（原生属性） -->
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- IP拦截列表标题 -->
+    <!-- IP拦截列表标题（修复语法错误） -->
     <TextView
         android:id="@+id/ip_list_title"
         android:layout_width="wrap_content"
@@ -25,10 +26,10 @@
         android:text="拦截IP列表："
         android:textSize="16sp"
         android:textStyle="bold"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/tun_switch_button"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp" <!-- 修复：统一使用android:前缀的margin属性 -->
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <!-- IP输入框 -->
     <EditText
@@ -40,12 +41,12 @@
         android:maxLines="1"
         android:padding="10dp"
         android:background="@android:drawable/editbox_background"
-        app:layout_constraintTop_toBottomOf="@id/ip_list_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/ip_list_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- IP列表展示 -->
     <ListView
@@ -53,22 +54,22 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@android:drawable/list_selector_background"
-        app:layout_constraintTop_toBottomOf="@id/ip_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/ip_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- 修复：保存按钮同样使用原生Button -->
+    <!-- 保存按钮 -->
     <Button
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="保存拦截列表"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/ip_list_view"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="15dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
