--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- 主切换按钮 -->
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/tun_switch_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="启动拦截"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- IP拦截列表标题（修复语法错误） -->
-    <TextView
-        android:id="@+id/ip_list_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="拦截IP列表："
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tun_switch_button"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <!-- IP输入框 -->
-    <EditText
-        android:id="@+id/ip_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="输入IP地址（如：192.168.1.1）"
-        android:inputType="textUri"
-        android:maxLines="1"
-        android:padding="10dp"
-        android:background="@android:drawable/editbox_background"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ip_list_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- IP列表展示 -->
-    <ListView
-        android:id="@+id/ip_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@android:drawable/list_selector_background"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ip_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- 保存按钮 -->
-    <Button
-        android:id="@+id/save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="保存拦截列表"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/ip_list_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
