--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".MainActivity">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/tun_switch_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="启动VPN"
-        android:layout_marginBottom="16dp" />
-
-    <EditText
-        android:id="@+id/ip_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="输入要拦截的IP地址"
-        android:layout_marginBottom="8dp" />
-
-    <Button
-        android:id="@+id/add_ip_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="添加IP"
-        android:layout_gravity="end"
-        android:layout_marginBottom="16dp" />
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/ip_list_text"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="拦截IP列表：\n"
-        android:background="#f5f5f5"
-        android:padding="8dp"
-        android:textSize="14sp" />
-
-    <Button
-        android:id="@+id/save_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="保存名单"
-        android:layout_marginTop="16dp" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
